--- a/clanok (3).tex
+++ b/clanok (3).tex
@@ -15,15 +15,15 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Virtuálna realita.\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Bey Veronika}} % meno a priezvisko vyučujúceho na cvičeniach
 
-\author{Meno Priezvisko\\[2pt]
+\author{Bey Veronika\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
 	{\small Fakulta informatiky a informačných technológií}\\
-	{\small \texttt{...@stuba.sk}}
+	{\small \texttt{xbey@stuba.sk}}
 	}
 
-\date{\small 30. september 2015} % upravte
+\date{\small 05. october 2022} % upravte
 
 
 
@@ -37,26 +37,19 @@
 
 
 
-\section{Úvod}
+\section{Prečo tato tema?}
 
-Motivujte čitateľa a vysvetlite, o čom píšete. Úvod sa väčšinou nedelí na časti.
 
-Uveďte explicitne štruktúru článku. Tu je nejaký príklad.
-Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlený v časti~\ref{nejaka}.
-Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
-Záverečné poznámky prináša časť~\ref{zaver}.
+Túto tému som si vybrala, pretože je momentálne aktuálna. V súčasnosti existuje veľa hier, ktoré využívajú technológie virtuálnej reality. Je to jednoduchý a skvelý spôsob, ako zažiť emócie skutočného sveta bez toho, aby ste opustili svoj domov~\ref{nejaka}.
 
 
 
-\section{Nejaká časť} \label{nejaka}
-
-Z obr.~\ref{f:rozhod} je všetko jasné. 
-
+\section{Čo je virtuálna realita. A ako je to užitočné?} \label{nejaka}
+.~\ref{f:rozhod} Prilby a technológie virtuálnej reality
 \begin{figure*}[tbh]
 \centering
 %\includegraphics[scale=1.0]{diagram.pdf}
-Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný plávajúci objekt. Po vytvorení diagramu zrušte znak \texttt{\%} pred príkazom \verb|\includegraphics| označte tento riadok ako komentár (tiež pomocou znaku \texttt{\%}).
-\caption{Rozhodujúci argument.}
+Virtuálna realita je akási podoba sveta okolo nás, umelo vytvorené pomocou technických prostriedkov a prezentované v digitálnej podobe. Vytvorené efekty sa premietajú do ľudskej mysle a umožňujú mu zažiť vnemy, ktoré sa čo najviac približujú skutočnosti \texttt{\%}).
 \label{f:rozhod}
 \end{figure*}
 
@@ -64,9 +57,7 @@ Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný pláva
 
 \section{Iná časť} \label{ina}
 
-Základným problémom je teda\ldots{} Najprv sa pozrieme na nejaké vysvetlenie (časť~\ref{ina:nejake}), a potom na ešte nejaké (časť~\ref{ina:nejake}).\footnote{Niekedy môžete potrebovať aj poznámku pod čiarou.}
-
-Môže sa zdať, že problém vlastne nejestvuje\cite{Coplien:MPD}, ale bolo dokázané, že to tak nie je~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
+ Problém je v správnej implementácii virtuálneho prostredia. Oneskorenie a rozmazanie obrazu často vedú k závratom a nevoľnosti pri ponorení do virtuálnej reality.  Jednou z príčin nevoľnosti pri ponorení do virtuálnej reality je „klamanie“ mozgu. Poloha a pohyb človeka v priestore je fixovaný vestibulárnym aparátom umiestneným vo vnútornom uchu. Práve tento orgán prenáša do mozgu informácie o tom, čo sa s telom momentálne deje. Spolu s informáciami prijatými inými zmyslami (najmä očami) mozog určuje, čo zvyšok tela potrebuje robiť a cítiť.\cite{Coplien:MPD},Vo virtuálnej realite sa ukazovatele vestibulárneho aparátu a orgánov videnia líšia, pretože človek vidí pohyb, ale telo zostáva v pokoji. Mozog vníma vizuálnu informáciu ako halucináciu, ktorú možno zažiť pri otrave, a preto spôsobuje nevoľnosť, aby sa telo očistilo. Tento jav sa nazýva kinetóza.~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
 
 
 \subsection{Nejaké vysvetlenie} \label{ina:nejake}
