--- a/clanok (3).tex
+++ b/clanok (3).tex
@@ -58,6 +58,12 @@ Virtuálna realita je akási podoba sveta okolo nás, umelo vytvorené pomocou t
 \section{Iná časť} \label{ina}
 
  Problém je v správnej implementácii virtuálneho prostredia. Oneskorenie a rozmazanie obrazu často vedú k závratom a nevoľnosti pri ponorení do virtuálnej reality.  Jednou z príčin nevoľnosti pri ponorení do virtuálnej reality je „klamanie“ mozgu. Poloha a pohyb človeka v priestore je fixovaný vestibulárnym aparátom umiestneným vo vnútornom uchu. Práve tento orgán prenáša do mozgu informácie o tom, čo sa s telom momentálne deje. Spolu s informáciami prijatými inými zmyslami (najmä očami) mozog určuje, čo zvyšok tela potrebuje robiť a cítiť.\cite{Coplien:MPD},Vo virtuálnej realite sa ukazovatele vestibulárneho aparátu a orgánov videnia líšia, pretože človek vidí pohyb, ale telo zostáva v pokoji. Mozog vníma vizuálnu informáciu ako halucináciu, ktorú možno zažiť pri otrave, a preto spôsobuje nevoľnosť, aby sa telo očistilo. Tento jav sa nazýva kinetóza.~\cite{Czarnecki:Staged, Czarnecki:Progress}. Napriek tomu, aj dnes na webe narazíme na všelijaké pochybné názory\cite{PLP-Framework}. Dôležité veci možno \emph{zdôrazniť kurzívou}.
+\begin{figure}[h]
+	\centering
+	\scalebox{0.9}{\includegraphics{pic1.jpg}} 
+	\caption{Diagram}
+	\label{framework}
+\end{figure}
 
 
 \subsection{Nejaké vysvetlenie} \label{ina:nejake}
